--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,7 +238,7 @@ body {
 /* line 2, ../../../components/sass/modules/_intro.scss */
 header .fullheight {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url("https://landonhotel.com/images/hotel/yakAndYeti.jpg");
+    url("https://www.yakandyeti.com/templates/yootheme/cache/slide4-7f44eb04.jpeg");
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-background-size: cover;
